- changed date format - Fix margin-bottom on mobile - Go up button is now visible on iphone when scroll up - added date range to the title

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -71,7 +71,7 @@ a {
 
 @media only screen and (max-width: 600px) {
   main {
-    padding: 0;
+    padding: 0 0 50px;
   }
 
   header > h1 {
